--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebGL Intro</title>
-    <script src="gl-matrix-min.js" defer></script>
-    <script src="main.js" defer></script>
-    <style>
-        canvas{
-            border: 1px solid black;
-            height: 300px;
-            width: 300px;
-        }
-    </style>
 </head>
 <body>
     <h1>WebGL Intro</h1>
-    <canvas></canvas>
+    <ul>
+    <li><a href="triangle.html">Triangle</a></li>
+    <li><a href="box.html">Box</a></li>
+    </ul>
 </body>
 </html>
