--- a/box.html
+++ b/box.html
@@ -10,14 +10,15 @@
     <style>
         canvas{
             border: 1px solid black;
-            height: 300px;
-            width: 300px;
+            height: 50%;
+            width: 80%;
         }
     </style>
 </head>
 <body>
-    <h1>WebGL Intro | Box</h1>
-    <canvas id="box"></canvas>
-    <a href="index.html">Back</a>
+    <h1>WebGL Intro | Box</h1><a href="index.html">Back</a>
+    <br />
+    <canvas width="600px" height="300px" id="box"></canvas>
+    
 </body>
 </html>
