--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <ul>
     <li><a href="triangle.html">Triangle</a></li>
     <li><a href="box.html">Box</a></li>
+    <li><a href="interaction.html">interaction</a></li>
+    <li><a href="pointCloud.html">interaction</a></li>
     </ul>
 </body>
 </html>
