--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li><a href="triangle.html">Triangle</a></li>
     <li><a href="box.html">Box</a></li>
     <li><a href="interaction.html">interaction</a></li>
-    <li><a href="pointCloud.html">interaction</a></li>
+    <li><a href="pointCloud.html">Point Clouds</a></li>
     </ul>
 </body>
 </html>
